<resources>
    <string name="app_name">Task2</string>
    <string name="answer">Svar:</string>
    <string name="correct">Riktig!</string>
    <string name="incorrect">Feil. Riktig svar er:</string>
    <string name="generate_random_number">Generer tilfeldig nummer</string>
    <string name="upperLimit">50</string>
    <string name="add">Adder</string>
    <string name="multiply">Multipliser</string>
    <string name="try_again">Prøv igjen!</string>
    <string name="wrong_the_correct_answer_is">"Feil svar, riktig svar er: "</string>
    <string name="number">"Nummer: "</string>
    <string name="max_value_generated">Størst mulig tilfeldig tall:</string>
    <string name="tall_2_5">Tall 2: 5</string>
    <string name="tall_1_3">Tall 1: 3</string>
</resources>