<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="22dp"
    android:paddingEnd="22dp"
    tools:context=".Activity2B">

    <TextView
        android:id="@+id/display_number1"
        android:layout_width="370dp"
        android:layout_height="41dp"
        android:layout_marginTop="24dp"
        android:text="@string/tall_1_3" />

    <TextView
        android:id="@+id/display_number2"
        android:layout_width="371dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:text="@string/tall_2_5" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="366dp"
        android:layout_height="40dp"
        android:textSize="20sp"
        android:text="@string/answer" />

    <EditText
        android:id="@+id/answer"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/answer" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="366dp"
        android:layout_height="40dp"
        android:textSize="20sp"
        android:text="@string/max_value_generated" />

    <EditText
        android:id="@+id/upperlimit"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/upperLimit" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="365dp"
        android:layout_height="66dp"
        android:layout_marginTop="82dp"
        android:onClick="addOnClick"
        android:text="@string/add" />

    <Button
        android:id="@+id/multiply_button"
        android:layout_width="365dp"
        android:layout_height="66dp"
        android:layout_marginTop="17dp"
        android:onClick="multiplyOnClick"
        android:text="@string/multiply" />

</LinearLayout>
